<resources>
    <string name="app_name">Social 21</string>

    <!--     Custom Strings-->
    <string name="home">Home</string>
    <string name="add">Add Post</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
</resources>

