<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification"
        />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        />





</menu>